--- a/frontend/wager/package.json
+++ b/frontend/wager/package.json
@@ -11,7 +11,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -29,7 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -51,6 +50,10 @@
     ]
   },
   "devDependencies": {
-    "jest": "^29.3.1"
+    "@babel/preset-typescript": "^7.18.6",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.3.1",
+    "@types/jest": "^29.2.4"
   }
 }
