--- a/frontend/wager/package.json
+++ b/frontend/wager/package.json
@@ -21,7 +21,7 @@
     "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -51,9 +51,9 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.4",
     "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
     "jest-environment-jsdom": "^29.3.1",
-    "@types/jest": "^29.2.4"
+    "ts-jest": "^29.0.3"
   }
 }
